--- a/Titanic/Notebooks/extract_transfrom_load.ipynb
+++ b/Titanic/Notebooks/extract_transfrom_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1113,24 +1113,25 @@
        "[86 rows x 12 columns]"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extracting last and first names of Age column nulls\n",
+    "# Creating age nulls only df and extracting last_name, first_name, and id \n",
     "test_nulls_only_df = test_df_dropped.loc[test_df_dropped['Age'].isna()]\n",
     "\n",
-    "test_nulls_last_names = list(test_nulls_only_df['last_name'])\n",
-    "test_nulls_first_names = list(test_nulls_only_df['first_name'])\n",
+    "test_nulls_last_names = test_nulls_only_df['last_name'].values\n",
+    "test_nulls_first_names = test_nulls_only_df['first_name'].values\n",
+    "test_nulls_ids = test_nulls_only_df['PassengerId'].values\n",
     "\n",
     "test_nulls_only_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1331,7 @@
        "[1317 rows x 5 columns]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1462,7 @@
        "[1317 rows x 3 columns]"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1520,7 @@
        "       '5m'], dtype=object)"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1584,7 @@
        "948      Kraeff  Mr Theodor  NK"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1617,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1736,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1763,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1780,7 @@
        "       '0.4'], dtype=object)"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1947,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2063,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2172,7 @@
        " 4]"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2184,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([417], dtype='int64')"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df_dropped.loc[test_df_dropped['PassengerId'] == test_nulls_ids[85]].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -2435,26 +2456,23 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Inserting found null values into dataframe\n",
-    "i = 0\n",
-    "\n",
-    "for row in range(len(test_df_dropped)):\n",
-    "    if test_df_dropped['Age'].isna().iloc[row]:\n",
-    "        test_df_dropped.loc[row, ['Age']] = test_ages_to_fill[i]\n",
-    "        i += 1\n",
+    "for x in range(len(test_nulls_ids)):\n",
+    "    index = test_df_dropped.loc[test_df_dropped['PassengerId'] == test_nulls_ids[x]].index\n",
+    "    test_df_dropped.loc[index, ['Age']] = test_ages_to_fill[x]\n",
     "\n",
     "test_df_dropped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -2503,8 +2521,7 @@
    ],
    "source": [
     "# Checking if age values were inserted correctly\n",
-    "test_ids_with_nulls = test_nulls_only_df['PassengerId']\n",
-    "test_inserted_ages = list(test_df_dropped.loc[test_df_dropped['PassengerId'].isin(test_ids_with_nulls)]['Age'])\n",
+    "test_inserted_ages = list(test_df_dropped.loc[test_df_dropped['PassengerId'].isin(test_nulls_ids)]['Age'])\n",
     "\n",
     "if test_inserted_ages == test_ages_to_fill:\n",
     "    print('Holy shit you did it')\n",
@@ -2522,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2791,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2787,7 +2804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -2822,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -3062,7 +3079,7 @@
        "[891 rows x 11 columns]"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3083,7 +3100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3352,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3363,7 +3380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -3548,7 +3565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3569,7 +3586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -3605,7 +3622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -3844,24 +3861,25 @@
        "[175 rows x 12 columns]"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extracting last and first names of Age column nulls\n",
+    "# Creating age nulls only df and extracting last_name, first_name, and id \n",
     "train_nulls_only_df = train_df_dropped.loc[train_df_dropped['Age'].isna()]\n",
     "\n",
-    "train_nulls_last_names = list(train_nulls_only_df['last_name'])\n",
-    "train_nulls_first_names = list(train_nulls_only_df['first_name'])\n",
+    "train_nulls_last_names = train_nulls_only_df['last_name'].values\n",
+    "train_nulls_first_names = train_nulls_only_df['first_name'].values\n",
+    "train_nulls_ids = train_nulls_only_df['PassengerId'].values\n",
     "\n",
     "train_nulls_only_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +3997,7 @@
        "[1315 rows x 3 columns]"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3991,7 +4009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4014,7 +4032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -4038,7 +4056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4146,7 +4164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4161,7 +4179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -4344,7 +4362,7 @@
        " 7]"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4356,7 +4374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -4608,26 +4626,23 @@
        "[889 rows x 12 columns]"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Inserting found null values into dataframe\n",
-    "i = 0\n",
-    "\n",
-    "for row in range(len(train_df_dropped)):\n",
-    "    if train_df_dropped['Age'].isna().iloc[row]:\n",
-    "        train_df_dropped.loc[row, ['Age']] = train_ages_to_fill[i]\n",
-    "        i += 1\n",
+    "for x in range(len(train_nulls_ids)):\n",
+    "    index = train_df_dropped.loc[train_df_dropped['PassengerId'] == train_nulls_ids[x]].index\n",
+    "    train_df_dropped.loc[index, ['Age']] = train_ages_to_fill[x]\n",
     "\n",
     "train_df_dropped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -4663,7 +4678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -4676,8 +4691,7 @@
    ],
    "source": [
     "# Checking if age values were inserted correctly\n",
-    "train_ids_with_nulls = train_nulls_only_df['PassengerId']\n",
-    "train_inserted_ages = list(train_df_dropped.loc[train_df_dropped['PassengerId'].isin(train_ids_with_nulls)]['Age'])\n",
+    "train_inserted_ages = list(train_df_dropped.loc[train_df_dropped['PassengerId'].isin(train_nulls_ids)]['Age'])\n",
     "\n",
     "if train_inserted_ages == train_ages_to_fill:\n",
     "    print('Holy shit you did it')\n",
@@ -4695,7 +4709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -4801,7 +4815,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4814,7 +4828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
